--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Trip Wings</title>
   </head>
   <body>
-    <main id="root"></main>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
